# CodingLife

./: .deepsource.toml  .gitignore  .hound.yml  .ruby-style.yml  AGENTS.md  README.md  greenkeeper.json  sonar-project.properties  test.rb
.github/workflows/: build.yml
20070218/: README.md  solve.py  test.py
20070221/: README.md  cycle_length.py  solve.py
20070224/: README.md
20070224/Lua/: cycle_length.lua  solve.lua  test_cycle_length.lua
20070224/Ruby/: CycleLength.rb  TestCycleLength.rb  solve.rb  test.bat
20131112/: README.md  test.rb
20131113/: test.rb
20131207/: test.rb
20140102/: test.rb
20140430/: test.rb
20140501/: README.md
20140501/spec/: boggle_spec.rb
20140505/: Gemfile  Guardfile
20140505/spec/: picnic_spec.rb
20140508/: README.md
20140508/spec/: two_sum_spec.rb
20140511/: README.md
20140511/spec/: longest_substring_spec.rb
20140928/: README.md  test.rb
20141009/: README.md  test.rb
20141012/: README.md  test.rb
20141215/: README.md  test.rb
20141218/: README.md  test.py
20141219/: README.md  test.clj
20141226/: README.md  build.sbt
20141227/: README.md
20141227/Python/: test.py
20141227/Ruby/: test.rb
20150101/: build.sbt
20150109/: README.md  jolly_jumper.py
20150121/: README.md  chapter1.ipynb  thinkbayes.py
20150206/: README.md  build.sbt
20150227/: README.md  test.py
20150314/: README.md
20150405/: README.md  index.html
20150405/css/: style.css
20150405/js/: main.coffee  main.js
20150410/: README.md  test.rb
20150413/: build.sbt
20150417/: README.md  test.rb
20150429/: think_bayes_chapter02.rb
20150430/: think_bayes_chapter03.rb
20150511/: README.md
20150526/: README.md  test.rb
20150529/: README.md  test.py
20150727/: README.md
20150728/: test.rb
20150817/: build.sbt
20150831/: README.md  chapter01.clj
20150904/: README.md  build.sbt  scalajs-tutorial-fastopt.html
20150908/: README.md
20150910/: README.md  chapter01.clj
20150913/: build.sbt
20150917/: README.md  test.php
20150921/: README.md
20150922/: README.md  chapter01.clj
20150923/: application.py  client.py  game.py  othello.py
20150923/templates/: index.html
20151008/: test.clj
20151009/: README.md  test.clj
20151011/: README.md  test.clj
20151012/: README.md  test.clj
20151013/: README.md  test.clj
20151014/: README.md  test.groovy
20151015/: package.json  test.js  test.ts
20151016/: README.md  chapter02.clj
20151017/: test.groovy
20151019/: .gitignore  bower.json
20151019/src/: Main.purs  Some.purs
20151019/test/: Main.purs
20151020/: README.md  chapter03.clj
20151021/: test.exs
20151022/: README.md  chapter01.clj
20151023/: test.clj
20151024/: Test.elm  elm-package.json  package.json
20151025/: migration.php
20151026/fp-in-scala/: build.sbt
20151026/harp-demo/: index.html
20151026/jspm-demo/: .gitignore  config.js  index.html  package.json
20151026/webpack-demo/: index.html  webpack.config.js
20151027/simple-spring-boot-demo/: app.groovy  start.sh
20151027/spring-demo/: README.md  build.gradle  start.sh  test.sh
20151028/htdp/: chapter04.clj
20151029/sicp/: chapter01.clj
20151030/htdp/: chapter04.clj
20151102/clojure/: test.clj
20151102/docker/: Dockerfile  start.sh
20151103/ts/: README.md  app.ts  package.json
20151104/clojure/: test.clj
20151105/sicp/: chapter01.clj
20151106/spring-boot/: .gitignore  build.gradle
20151107/algorithms/: test.clj
20151108/algorithms/: test.clj
20151109/fp-in-scala/: build.sbt
20151109/ninja/: README.md  pom.xml
20151110/htdp/: chapter05.clj
20151111/htdp/: chapter06.clj  test.clj
20151112/clojure/: test.clj
20151113/ts/: package.json  test.ts
20151116/angular/: app.ts  index.html  style.css
20151117/money/: test.rb
20151117/tddbe/: test.rb
20151119/sicp/: chapter01.clj
20151120/: README.md
20151120/scala/: build.sbt
20151122/electron/: .gitignore  README.md  app.ts  build.sh  index.html  main.coffee  main.js  package-lock.json  package.json  style.css
20151123/riot/: README.md  app.tag  index.html  package.json
20151123/ruby/: test.rb
20151124/angular/: package.json
20151125/angular/: README.md  package.json
20151126/sicp/: README.md  chapter01.clj
20160113/: Gemfile  config.ru  demo_api.rb
20190326/: .gitignore
20211017/: README.md
20230518/: README.md
20231022/python/: .env.default  .gitignore  README.md  consumer.py  events.py  producer.py  pyproject.toml  schema.avsc  schema.py
20240207/python/: README.md  pyproject.toml  test_histogram.py
20240520/python/: README.md  client.py  pyproject.toml  server.py
20250206/python/: README.md  main.py  pyproject.toml
20250206/python/src/: app.py
20250429/python/: .gitignore  README.md  main.py  pyproject.toml
20250429/python/docs/: copilot-chat-guide.md
20250506/python/: .dockerignore  .env.example  .gitignore  README.md  main.py  pyproject.toml
20250506/python/docs/: git-commit-message-guide.md
20250506/python/src/: application.py  utils.py
20250522/python/: .gitignore  README.md  main.py  pyproject.toml
20250528/python/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
20250528/python/src/: app.py  application.py  rag.py
ThinkBayes/: README.md  thinkbayes.py
fp-in-kotlin/: settings.gradle.kts
htdp/: README.md
sicp/: README.md
(+4270 files in other folders)
