[project]
name = "kafka-demo"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastavro>=1.10.0",
    "kafka-python-ng>=2.2.3",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "ruff>=0.8.4",
]

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.ruff]
lint.select = ["A", "B", "C"]
