[tool.poetry]
name = "http-example"
version = "0.1.0"
description = ""
authors = ["Ashal aka JOKER <ahastudio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
